--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -3,19 +3,19 @@
   style="height: 100dvh"
 >
   <div class="h-full w-full flex xl:flex-row flex-column xl:justify-content-between justify-content-evenly align-items-center">
-    <a href="https://github.com/bullbatti/InOutFlow_client" target="_blank" class="action h-full m-0 p-0">
-      <div class="action xl:h-full h-2 w-full " id="boh">
-        <p>See cilent project</p>
+    <a href="https://github.com/bullbatti/InOutFlow_client" target="_blank" class="action h-full m-0 p-0 xl:w-auto w-full">
+      <div class="link-container action xl:h-full h-2 w-full " id="front-end">
+        <p>See front-end project</p>
       </div>
     </a>
 
-    <a href="https://github.com/bullbatti/InOutFlow_server" target="_blank" class="action centered h-full m-0 p-0" >
-      <div class="action xl:h-full h-2 w-full border-0" id="boh1">
-        <p>See server project</p>
+    <a href="https://github.com/bullbatti/InOutFlow_server" target="_blank" class="action h-full m-0 p-0 xl:w-auto w-full border-solid xl:border-y-none xl:border-x-3 border-x-none border-y-3 border-900 " >
+      <div class="link-container action xl:h-full h-2 w-full border-0" id="back-end">
+        <p>See back-end project</p>
       </div>
     </a>
 
-    <div class="action xl:h-full h-2 w-full" id="boh2" routerLink="/login">
+    <div class="link-container action xl:h-full h-2 w-full cursor-pointer" id="log-in" routerLink="/login">
       <p>Log in</p>
     </div>
   </div>
